# remote_lab

./: .gitignore  README.md  Remote lab.docx  ~$mote lab.docx  ~$Диплом.docx  ~$Предзащита (Щучкин).pptx  Диплом.docx  Защита (Щучкин).docx  Утверждение тем КНТ (Щучкин) 4.pptx
progs/custom_protocol/examples/: custom-master.ino  custom-slave.ino
progs/remote_lab/: .gitignore  devices.json
progs/remote_lab/client/: __init__.py  _connection.py  client.py  controller.py  diag.py  example.py
progs/remote_lab/esp32_gateway/: NEEDS_TESTING.ino
progs/remote_lab/esp32gateway/: esp32gateway.ino
progs/remote_lab/manager/: .gitignore  AccessController.py  BasicClasses.py  CommandScheduler.py  DeviceDrivers.py  DeviceSupervisor.py  HardwareInterfaces.py  Interfaces.py  Logger.py  Procedures.py  TelemetryTypes.py  access_controller.py  command_scheduler.py  device_drivers.py  (+7 more)
progs/server_web/: .gitignore  config_sample.yml  manage.py  requirements.txt
ros/: MYREADME.md  activate_all_tty.sh  changes.md  clr.sh  readme.md  rebuild_arduino.sh  setmode.sh
ros/arduino/: readme
ros/src/canonical_utilities/: CMakeLists.txt  README.md  package.xml
ros/src/canonical_utilities/scripts/: connect_as_ros_master.bash  connect_as_ros_master_name.bash  connect_as_ros_slave.bash  connect_as_ros_slave_name.bash  playback.sh  record_data.sh
ros/src/gmod/main/: CMakeLists.txt  package.xml  setup.py
ros/src/gmod/main/launch/: aruco.launch  bridge.launch  joy.launch  lce.launch  manctl.launch  mobot_du_kvorum_bridge.launch  servolocator.launch
ros/src/gmod/main/progs/demo1/: mod-build-gazebo-model.sh  mod-start-model.sh  mod-stop-model.sh  plan.p  r-ctl.sh  readme
ros/src/gmod/main/progs/demo1/config/: env.ctl  map.ctl  robot.cfg  room.map
ros/src/gmod/main/scripts/: readme
ros/src/gmod/main/scripts/config/: robot.cfg
ros/src/gmod/main/scripts/ctl-curs-mv/: arloc.sh  brain.py  ctl-curs.py  r.sh  readme
ros/src/gmod/main/scripts/local_comm_emulator/: lce.py  lce.sh
ros/src/gmod/main/scripts/manctl-curs/: arloc.sh  manctl-curs.py  r.sh  readme
ros/src/gmod/main/scripts/mobot_du_kvorum_bridge/: mobot_du_kvorum_bridge.py  r.sh  rl.sh
ros/src/gmod/main/scripts/servoctl/: r.sh  servoctl.py
ros/src/gmod/main/scripts/utils/: gen-aruco-materials.py  gen-numering-materials.py  genpic-num.py  map2world.py  mod-build-gazebo-model.sh  mod-start-gazebo-model.sh  mod-stop-gazebo-model.sh  run-model-kvorum-mobot.sh
ros/src/gmod/main/src/gmodctl/: mathfish.py  mbridge.py  mobot_models.py  quat_euler.py
ros/src/gmod/robots/mobot_du/: CMakeLists.txt  model.config  package.xml
ros/src/gmod/robots/mobot_du/config/: control.yaml
ros/src/gmod/robots/mobot_du/launch/: config.rviz  empty.launch  empty2.launch  mobot.launch  plan1.launch  plan2.launch  robolab.launch  robot.launch  rviz.launch  test.launch
ros/src/gmod/robots/mobot_du/urdf/: macros.xacro  model.urdf.xacro
ros/src/gmod/robots/sps-robot/robot_description/: CMakeLists.txt
ros/src/gmod/robots/sps-robot/robot_description/media/materials/scripts/: example.material
ros/src/gmod/robots/sps-robot/robot_description/rviz/: test_robot.rviz
ros/src/gmod/robots/sps-robot/robot_description/src/: contact_handler.cpp
ros/src/gmod/robots/sps-robot/robot_description/urdf/: test_robot.urdf.xacro
ros/src/kvorum2/kvorum2/: CMakeLists.txt  package.xml  setup.py
ros/src/kvorum2/kvorum2/kvorum_m/: mmain.py
ros/src/kvorum2/kvorum2/kvorum_v/: vizagent.py  vizenv.py  vmain.py
ros/src/kvorum2/kvorum2/launch/: mod.launch  viz.launch
ros/src/kvorum2/kvorum2/src/kvorum2/: agent.py  behavior.py  ctb.py  ekr16.py  env.py  fsm.py  fsm_alternative.py  gdic.py  geometry.py  mapfile.py  rcproto.py  tgprint.py  tmurobot.py  tshapes.py
ros/src/kvorum2/kvorum2/utils/: map2ctl.py
ros/src/kvorum2/usr/unchecked/ant/: CMakeLists.txt  package.xml
ros/src/kvorum2/usr/unchecked/ant/scripts/aggr/: aggr.py  aggr.v  aggr_all.py  aggr_for.py  ant2.py  run  run100
ros/src/kvorum2/usr/unchecked/ant/scripts/aggr/config/: agents.ctl  agents2.ctl  agents3.ctl  agents4.ctl  env.ctl  map.ctl  map1.ctl  map3.ctl  map4.ctl  map5.ctl
ros/src/kvorum2/usr/unchecked/ant/scripts/ant/: ant.m  ant.py  ant1.py  run  variatns
ros/src/kvorum2/usr/unchecked/ant/scripts/ant/config/: agents.ctl  agents2.ctl  env.ctl  map.ctl  map1.ctl  map2.ctl  map3.ctl  map4.ctl
ros/src/kvorum2/usr/unchecked/mobilization_ants/: CMakeLists.txt  package.xml
ros/src/kvorum2/usr/unchecked/mobilization_ants/config/: agents.ctl  map.ctl
ros/src/kvorum2/usr/unchecked/mobilization_ants/launch/: all.launch  yarp4.launch
ros/src/kvorum2/usr/unchecked/mobilization_ants/scripts/: ants.m  ants.v  massive_run.bash  run  run_m.bash  run_manual.bash  run_py.bash  run_v.bash
ros/src/kvorum2/usr/unchecked/mobilization_ants/src/: manual_control.py  real_ants.py  simple_ants.py
ros/src/kvorum2/usr/unchecked/mobilization_ants/src/agents/: agents.py  fsm_agents.py  hierarchichal_policy.py
ros/src/kvorum2/usr/unchecked/swhunt/: CMakeLists.txt  package.xml
ros/src/kvorum2/usr/unchecked/swhunt/config/: agents.ctl  env.ctl  map.ctl
ros/src/kvorum2/usr/unchecked/swhunt/scripts/: hunt.m  hunt.v  run
ros/src/kvorum2/usr/unchecked/swhunt/src/: swhunt.cpp
ros/src/kvorum2/usr/unchecked/temper/: CMakeLists.txt  package.xml  readme
ros/src/kvorum2/usr/unchecked/temper/config/: agents.ctl  env.ctl  map.ctl
ros/src/kvorum2/usr/unchecked/temper/scripts/: exp1  exp2  gbp.m  gbp.py  gbp.v  run
ros/src/kvorum2/usr/unchecked/temper/src/: temper.cpp
ros/src/msg/msg_object_cloud/: CMakeLists.txt  package.xml
ros/src/msg/msg_object_cloud/msg/: Object.msg  ObjectArray.msg
ros/src/msg/msg_speech/: CMakeLists.txt  package.xml
ros/src/msg/msg_speech/msg/: Speech.msg
ros/src/msg/msg_speech/srv/: SpeechCommand.srv
ros/src/yy_ctl/msg/: CMakeLists.txt  package.xml
ros/src/yy_ctl/msg/msg/: arucopoint.msg  arucopos.msg  bt_data.msg  cmd.msg  dtm.msg  sens.msg  servolocator.msg
ДЛЯ ПЕЧАТИ/: Отзыв.docx
пригодится/: Remote lab.docx  Обзор приложение.docx  Преддиплом (Щучкин) (правки).pptx
(+589 files in other folders)
