<?xml version="1.0"?>
<package format="2">
  <name>canonical_utilities</name>
  <version>0.0.0</version>
  <description>Package that groups various common scripts not specific to a robot.</description>

  <maintainer email="rovboma@gmail.com">Maxim Rovbo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
