<?xml version="1.0"?>
<package format="2">
  <name>kvorum2</name>
  <version>0.0.0</version>
  <description>Kvorum PyLib and utils</description>
  <maintainer email="mail@mail.mail">Valery Karpov</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>