<?xml version="1.0"?>
<package format="2">
  <name>msg_speech</name>
  <version>0.1.0</version>
  <description>The msg_speech package</description>

  <maintainer email="rovboma@gmail.com">Rovbo Maxim</maintainer>

  <license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>std_msgs</depend>
	<depend>msg_user_control</depend>
	<depend>message_generation</depend>
	<depend>message_runtime</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
