<?xml version="1.0"?>
<package format="2">
  <name>mobot_du</name>
  <version>0.0.0</version>
  <description>The mobot_du urdf package</description>

  <maintainer email="karpov@todo.todo">karpov</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>xacro</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
